# concrete-strength-prediction

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  concrete-strength_prediction.ipynb  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
concrete_strength_prediction/: __init__.py  config.yml
concrete_strength_prediction/config/: core.py
concrete_strength_prediction/processing/: __init__.py  preprocessor.py  transformers.py
concrete_strength_prediction/utils/: data_manager.py
docs/: Makefile  concrete_strength_prediction.config.rst  concrete_strength_prediction.rst  concrete_strength_prediction.utils.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
requirements/: requirements-dev.txt  requirements.txt
tests/: conftest.py
tests/config/: test_core.py
tests/processing/: test_transformers.py
tests/utils/: test_data_manager.py
