[metadata]
name = concrete_strength_prediction
author = Jean Dos Santos
author_email = jeandsantos88@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Predictive model for concrete compressive strength
long_description = file: README.rst, HISTORY.rst, LICENSE
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = Concrete Mixture Strength Prediction, Concrete Strength Prediction 
url = https://github.com/jeandsantos/concrete-strength-prediction

[options]
packages = concrete_strength_prediction
install_requires =
    scikit-learn>=1.1.2
    feature-engine>=1.4.1
    pandas>=1.5
    numpy>=1.23
    matplotlib>=3.6
    mlflow>=1.29
    pydantic>=1.10
    strictyaml>=1.6
    typing_extensions>=4.3
python_requires = >=3.7
zip_safe = False
include_package_data = True

[options.extras_require]
testing =
    pytest>=7.3
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    pydantic>=1.10
    strictyaml>=1.6
    tox>=3.27
    black>=21
    isort>=5.10
development =
    ipykernel>=6.15
    ipython>=8.5
    ipywidgets>=8.0
    jupyter>=1.0

[options.packages.find]
where = concrete_strength_prediction
exclude = tests

[options.package_data]
concrete_strength_prediction = py.typed

[bumpversion]
current_version = '0.0.0'
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = current_version = '{current_version}'
replace = current_version = '{new_version}'

[bumpversion:file:concrete_strength_prediction/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
filename = concrete_strength_prediction
filename-patterns = *.py
max-line-length = 160
exclude = setup.py

[tool:pytest]
collect_ignore = ['setup.py']
